k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  labels:
    app: deploy-nodejs  name: deploy-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-app
  strategy: {}
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - image: <aws_account>.dkr.ecr.us-east-1.amazonaws.com/task/nodejs-app:a98712e
        name: nodejs-app
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:          
          httpGet:
            path: /health            
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 20
