k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc-nodejs
  name: svc-nodejs
spec:
  ports:
  - name: 80-3000
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodejs-app
  type: ClusterIP
status:
  loadBalancer: {}
