k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
   alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:<aws_account>:certificate/205278fa-ed7a-47de-abae-ae635cec84ad
   alb.ingress.kubernetes.io/ssl-redirect: '443'
  spec:
    rules:
      - host: test.domain.com      
        http:
          paths:          
          - path: /
              pathType: Prefix
              backend:
                service:
                  name: svc-nodejs
                  port:
                    number: 80
